--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -99,6 +99,7 @@ ul{color: rgb(12, 12, 12);}
     button{font-size: 5px;
       padding: 10px 20px !important; 
     }
+    .boton_e{font-size: 10px;}
 
       h1 {
         font-size: 50px!important;
