--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,5 +1,8 @@
 body{ 
             background-color: rgb(154, 192, 223);
+            margin: 0;
+            padding: 0;
+            position: relative;
 }
 
 h1{color: rgb(14, 38, 148);
@@ -42,7 +45,34 @@ ul{color: rgb(12, 12, 12);}
   border-radius: 20px;
 }
 
+.img_logo{
+   
+  max-width: 50%;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 20%;
+  height: 20%;
+  display: block;
+  border-radius: 20px;
+}
 
+ 
+  
+
+footer{
+margin-top: 20px;
+  background-color: rgb(14, 38, 148);
+  padding: 10px;
+
+  
+}
+
+button{margin-left: 20px;}
+
+p{color: rgb(235, 235, 235);
+  text-align: center;}
 
 .efecto{
             display: inline-flex;
